--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -878,15 +878,18 @@ The FEC has a lot of green features that are useful to homeowners! If you come t
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
                                 <rect key="frame" x="0.0" y="20" width="600" height="226"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eZ-Tm-wEf">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eZ-Tm-wEf">
                                 <rect key="frame" x="15" y="181" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="5Dg-HU-rQZ"/>
                                     <constraint firstAttribute="width" constant="50" id="jak-PJ-Oa3"/>
                                 </constraints>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="Button" image="Compass Button.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="c19-Tj-JAq" kind="custom" identifier="toCompassViewFromPoi" customClass="SWRevealViewControllerSeguePushController" id="pkW-gl-GOD"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2u1-rU-GGh">
                                 <rect key="frame" x="535" y="181" width="50" height="50"/>
@@ -912,7 +915,7 @@ The FEC has a lot of green features that are useful to homeowners! If you come t
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lkT-EM-yLV">
-                                <rect key="frame" x="82" y="-2" width="58" height="91"/>
+                                <rect key="frame" x="-39" y="-37" width="19" height="58"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -976,6 +979,7 @@ The FEC has a lot of green features that are useful to homeowners! If you come t
     </scenes>
     <resources>
         <image name="Cancel.png" width="201" height="200"/>
+        <image name="Compass Button.png" width="201" height="200"/>
         <image name="Compass.png" width="400" height="400"/>
         <image name="Save For Home Button.png" width="201" height="200"/>
         <image name="Save for Home Outline.png" width="201" height="200"/>
@@ -988,6 +992,7 @@ The FEC has a lot of green features that are useful to homeowners! If you come t
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="BYd-BC-rHW"/>
+        <segue reference="pkW-gl-GOD"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
