--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDe-bX-wAz">
-                                            <rect key="frame" x="78" y="28" width="42" height="21"/>
+                                            <rect key="frame" x="78" y="28" width="334" height="21"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="11"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -971,7 +971,7 @@ The FEC has a lot of green features that are useful to homeowners! If you come t
         <image name="rain-veil.jpg" width="640" height="416"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NYu-mA-wCA"/>
+        <segue reference="a8A-UZ-Wcs"/>
         <segue reference="ixy-0Y-gts"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
